--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <body>
-<h1> Rodrigo Flores</h1>
-</body>
+    <header>
+      <h1> Rodrigo Flores Montero </h1> 
+      <address>
+        <a> Calle del reloj, 18 Baja California, Mexico</a><br>
+        <a>Numero cel: 686 - 907- 3459</a>
+        </address>
+
