--- a/index.html
+++ b/index.html
@@ -1,8 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laboratorio2</title>
+    <link href="index.css" rel="stylesheet" type="text/css" />
+
+
+</head>
+
+</html>
+
 <body>
     <header>
       <h1> Rodrigo Flores Montero </h1> 
+
       <address>
         <a> Calle del reloj, 18 Baja California, Mexico</a><br>
-        <a>Numero cel: 686 - 907- 3459</a>
+        <a>Numero cel: 686 - 907- 3458</a>
         </address>
+    </body>
+
+    <footer>
+        <section>
+            <h3> Objetivos</h3>
+        </section>
+            <p>Estudiante de la carrera de Ingeniería en Innovación y Desarrollo en el Instituto Tecnológico de Monterrey, campus Monterrey. Actualmente me encuentro cursando mi noveno semestre, especializándome en logística y cadena de suministro. Experiencia en atención al cliente, eficiente en el desempeño de los sistemas administrativos y operativos. Tengo una gran motivación para seguir perfeccionando habilidades y crecer profesionalmente. </p>
+    </footer>
+ 
+        <footer>
+            <h3>Experiencia</h3>
+           <Li><em> Analista de procesos - Internos</em> <br>
+            Empresa Xquadrone SC - Mexicali, BC, Mexico <br>
+            Junio de 2021 - Octubre de 2021 (5 meses) </Li>
+        </footer>
+        <footer>
+            <h3>Voluntariado</h3>
+           <Li><em> Campañas Financieras</em> <br>
+            AEBMAC - Asociación de Estudiantes Baja Californianos en Monterrey<br>
+            Agosto de 2021 - Enero de 2022 (6 meses) </Li>
+        </footer>
+ 
+ 
+        <nav> <h3>Educación </h3> </nav>
+        <Li> Tecnologico de Monterrey<br>
+           Carrera: Ingeniero de Innovación y Desarrollo <br>
+    Ago 2018 - Ago 2023 <br>
+    Especialidad: Logística y Cadena de Suministro
+    </Li>
+    <br>
+    <Li> ESIC Business and Marketing School<br>
+        Administracion y gestion de empresas <br>
+    Ene 2022 - Ago 2022 <br>
+    </Li>
+    <br>
+    <Li> Modern Memorial Catholic High School<br>
+         Diploma de Escuela Secudaria<br>
+    Ago 2014 - Dec 2018 <br>
+    </Li>
+ 
+ 
+    <nav> <h3>Interes </h3> </nav>
+    <li>
+        NFL, pasar tiempo con amigos y familiares, cocinar, gym.
+    </Li>
+    </header>
 
