Cambios Pruebas finales

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-      <h1> Rodrigo Flores Montero </h1> 
+      <h1> Rodrigo D. Flores Montero </h1> 
 
       <address>
         <a> Calle del reloj, 18 Baja California, Mexico</a><br>
