--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1> Rodrigo D. Flores Montero </h1> 
 
       <address>
-        <a> Calle del reloj, 18 Baja California, Mexico</a><br>
+        <a> Calle del reloj 18, Baja California, Mexico</a><br>
         <a>Numero cel: 686 - 907- 3458</a>
         </address>
     </body>
